# backend/build/swagger.json
@@ -1026,6 +1026,34 @@
 				}
 			}
 		},
+		"/ride/getacceptRide": {
+			"get": {
+				"operationId": "GetacceptRide",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Ride"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "rideId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/geocoading/geocode": {
 			"get": {
 				"operationId": "GeocoadeAddress",
